kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-homework4
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: web-server
        image: custom-nginx:1.0.0-SNAPSHOT
        volumeMounts:
        - name: workdir
          mountPath: /homework
        - name: cm-volume
          mountPath: "/homework/conf"
        livenessProbe:
          httpGet:
            path: /
            port: 8000
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm /homework/index.html" ]
      volumes:
        - name: workdir
          persistentVolumeClaim:
            claimName: pvc-homework4
        - name: cm-volume
          configMap:
            name: cm-homework4
